syntax = "proto3";

package example;

option go_package = "/";

service ExampleService {
  rpc UnaryCall (Request) returns (Response);
  rpc ServerStreamingCall (Request) returns (stream Response);
  rpc ClientStreamingCall (stream Request) returns (Response);
  rpc BidirectionalStreamingCall (stream Request) returns (stream Response);
}

message Request {
  string message = 1;
}

message Response {
  string message = 1;
}
